| Summary: | ASTERISK-24721: manager: ModuleLoad action incorrectly reports 'module not found' during a Reload operation | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2015-01-25 18:41:44.000-0600 | Date Closed: | 2015-01-28 17:22:41.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/ManagerInterface |
| Versions: | 13.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When issuing a {{ModuleLoad}} action with a {{LoadType}} of {{Reload}}, AMI incorrectly reports that the module does not exist, even when the reload processes correctly.
Below is output of manually performing this with {{pbx_config.so}}: The pbx_config.so module is loaded as shown from CLI & AMI: {noformat} futang*CLI> module show like pbx_config Module Description Use Count Status Support Level pbx_config.so Text Extension Configuration 0 Running core 1 modules loaded AMI ModuleCheck action reports it's loaded also: Action: ModuleCheck ActionID: 123 Module: pbx_config.so Response: Success ActionID: 123 Version: Revision: 427276 {noformat} Reloading the module gives an error Response saying the module doesn't exist but the Reload event says it did reload just fine (same behaviour occurs without '.so' in the module name): {noformat} Action: ModuleLoad ActionID: 456 Module: pbx_config.so LoadType: reload Response: Error ActionID: 456 Message: No such module. Event: Reload Privilege: system,all Timestamp: 1422036834.656408 SequenceNumber: 44 File: manager.c Line: 1708 Func: manager_generic_msg_cb Module: pbx_config.so Status: 0 {noformat} Reloading the module from the CLI indicates it was successful and so does the Reload event: {noformat} futang*CLI> module reload pbx_config.so Module 'pbx_config.so' reloaded successfully. [Jan 23 12:17:03] -- Reloading module 'pbx_config.so' (Text Extension Configuration) [Jan 23 12:17:03] == Parsing '/etc/asterisk/extensions.conf': Found ... AMI EVENT RECEIVED DUE TO RELOAD FROM CLI COMMAND: Event: Reload Privilege: system,all Timestamp: 1422037023.438273 SequenceNumber: 61 File: manager.c Line: 1708 Func: manager_generic_msg_cb Module: pbx_config.so Status: 0 {noformat} | ||
| Comments: | |||